# RootDictMacroReproducer

./: CMakeLists.txt  README.md
cmake/: CMakeUtils.cmake
macros/: macro1.C
sub_dir/: CMakeLists.txt
sub_dir/include/: Base.h  MacroHelper.h  NamespaceStuff.h
sub_dir/src/: Base.cxx  BaseLinkDef.h  NamespaceStuff.cxx  NamespaceStuffLinkDef.h  executable.cxx
